fix align

--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -81,6 +81,7 @@ ul.network-icon .big-icon {
 
 .home-section header {
   margin-bottom: 1em;
+  text-align: justify;
 }
 
 // Narrower container for Hello World sections (primarily Blank widget content).
